# aoc2020

./: README.txt  day_1_1.py  day_1_2.py  day_2_1.py  day_2_2.py  day_3_1.py  day_3_2.py  day_4_1.py  day_4_2.py  day_5_1.py  day_5_2.py  day_6_1.py  day_6_2.py  day_7_1.py  day_7_2.py  pyproject.toml  utils.py
