[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = "Solutions for AOC 2020"
authors = ["Wenceslas des Déserts"]

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2020.11.13"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
